code test for line 169 to make sure the sign up form will break at 200px

--- a/css/style1.css
+++ b/css/style1.css
@@ -166,9 +166,9 @@ label input:valid + .text-input{
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 200px) {
 #login-box{
- width: 100%;
+ width: 100px;
      }
 
 }
